# libgha

./: CMakeLists.txt  README.md
.github/workflows/: codeql-analysis.yml
include/: libgha.h
src/: gha.c  sle.c  sle.h
test/: common.h  dtmf.c  main.c  ut.c
test/data/: 1000hz_0.85.pcm  20000hz_0.85.pcm  dtmf.pcm
